
                    **************************
                    ** MPTinR VERSION 1.6.x **
                    **************************
                    Changes in MPTinR Version 1.6.x
                    Released October 2014

    Significant User Visible Changes and new Features
    
    o   
    
    Bugfixes
    
    o   calculating FIA via fit.model did not work for individual data  
		sets.
		
	o	get.mpt.fia: added examples outside dontrun{} blocks running 
		simple fia tests, with and without inequalities.
    

                    **************************
                    ** MPTinR VERSION 1.5.x **
                    **************************
                    Changes in MPTinR Version 1.5.x
                    Released August 2014

    Significant User Visible Changes and new Features
    
    o   added numDeriv argument to fit functions (fit.mpt, fit.model, &
        fit.mptinr) which allows to deactivate numerical estimation of 
        hessian (for calculation of CIs) as it may be extremely time 
        consuming.
    
    Bugfixes
    
    o   
    
    
                    **************************
                    ** MPTinR VERSION 1.4.x **
                    **************************
                    Changes in MPTinR Version 1.4.x
                    Released May 2014

    Significant User Visible Changes and new Features
    
    o   
    
    Bugfixes
    
    o   repaired mConst argument and FIA function.



                    **************************
                    ** MPTinR VERSION 1.3.x **
                    **************************
                    Changes in MPTinR Version 1.3.x
                    Released April 2014

    Significant User Visible Changes and new Features
    
    o   added args.fia argument to fit.mpt and fit.model to pass
        arguments to get.mpt.fia (such as mConst, see below).
        
    o   added function lbmpt.to.mpt to transform a model in