@@ -1,0 +1,14 @@
+Do*s1 + (1-Do)*b*a1
+Do*(1-s1)*s2+(1-Do)*b*(1-a1)*a2
+Do*(1-s1)*(1-s2)+(1-Do)*b*(1-a1)*(1-a2)
+(1-Do)*(1-b)*n1
+(1-Do)*(1-b)*(1-n1)*n2                    
+(1-Do)*(1-b)*(1-n1)*(1-n2)                      
+
+(1-Dn)*b*a1
+(1-Dn)*b*(1-a1)*a2
+(1-Dn)*b*(1-a1)*(1-a2)
+Dn*(1-s1)*(1-s2) + (1-Dn)*(1-b)*n1
+Dn*(1-s1)*s2 + (1-Dn)*(1-b)*(1-n1)*n2
+Dn*s1 + (1-Dn)*(1-b)*(1-n1)*(1-n2)
+
