@@ -577,6 +577,7 @@ prediction.plot(br.sdt, m.2htm, 2, ylim = c(-2, 2), args.plot = list(main = "SDT
 #######################
 ## get.mpt.fia
 
+
 # Get the FIA for the 40 datasets from Broeder & Schuetz (2009, Experiment 3)
 # for the 2HTM model with inequality restrictions
 # (Can take a while.)
@@ -585,7 +586,11 @@ data(d.broeder)
 m.2htm <- system.file("extdata", "5points.2htm.model", package = "MPTinR")
 i.2htm <- system.file("extdata", "broeder.2htm.ineq", package = "MPTinR")
 
-get.mpt.fia(d.broeder, m.2htm, i.2htm, Sample = 10)
+get.mpt.fia(d.broeder, m.2htm, Sample = 1000) # Way too little samples
+get.mpt.fia(d.broeder, m.2htm, i.2htm, Sample = 1000)
 
-# should produce very similar results:
-get.mpt.fia(d.broeder, m.2htm, i.2htm, mConst = 2L^8)
+\dontrun{
+  # should produce very similar results:
+  get.mpt.fia(d.broeder, m.2htm, i.2htm)
+  get.mpt.fia(d.broeder, m.2htm, i.2htm, mConst = 2L^8)
+}
