@@ -1,8 +1,8 @@
 Package: MPTinR
 Type: Package
 Title: Analyze Multinomial Processing Tree Models
-Version: 1.6.0
-Date: 2014-10-15
+Version: 1.6.1
+Date: 2014-10-20
 Authors@R: c(person("Henrik", "Singmann", role = c("aut", "cre"),
     email = "henrik.singmann@psychologie.uni-freiburg.de"),
     person("David", "Kellen", role =  "aut"),
@@ -12,8 +12,8 @@ Authors@R: c(person("Henrik", "Singmann", role = c("aut", "cre"),
 Description: MPTinR provides a user-friendly way for the analysis of multinomial processing tree (MPT) models (e.g.,  Riefer, D. M., and Batchelder, W. H. [1988]. Multinomial modeling and the measurement of cognitive processes. Psychological Review, 95, 318-339) for single and multiple datasets. The main functions perform model fitting and model selection. Model selection can be done using AIC, BIC, or the Fisher Information Approximation (FIA) a measure based on the Minimum Description Length (MDL) framework. The model and restrictions can be specified in external files or within an R script in an intuitive syntax or using the contextree language for MPTs. The 'classical' .EQN file format for model files is also supported. Besides MPTs, MPTinR can fit a wide variety of other cognitive models such as SDT models (see fit.model). MPTinR supports multicore fitting and FIA calculation using the snowfall package. MPTinR can generate data from a model for e.g., simulation or parametric bootstrap and plot predicted versus observed data.
 URL: http://www.psychologie.uni-freiburg.de/Members/singmann/R/mptinr
 License: GPL (>= 2)
-Depends: R (>= 2.15.1), numDeriv
-Imports: Brobdingnag, Rcpp
+Depends: R (>= 2.15.1)
+Imports: numDeriv, Brobdingnag, Rcpp
 Suggests: snowfall (>= 1.84)
 LinkingTo: Rcpp, RcppEigen
 LazyLoad: yes
