@@ -1,0 +1,11 @@
+# This file was generated by Rcpp::compileAttributes
+# Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
+
+.determinant <- function(S, M, A, B, c, pattern, Ineq, s) {
+    .Call('MPTinR_determinant', PACKAGE = 'MPTinR', S, M, A, B, c, pattern, Ineq, s)
+}
+
+.determinant_c <- function(S, M, A, B, c, pattern, Ineq, s, cc) {
+    .Call('MPTinR_determinant_c', PACKAGE = 'MPTinR', S, M, A, B, c, pattern, Ineq, s, cc)
+}
+
