@@ -1,3 +1,0 @@
-## Use the R_HOME indirection to support installations of multiple R version
-PKG_LIBS = `$(R_HOME)/bin/Rscript -e "Rcpp:::LdFlags()"` 
-PKG_CPPFLAGS =  -I. -I../inst/include 
