@@ -1,6 +1,0 @@
-
-## This assume that we can call Rscript to ask Rcpp about its locations
-## Use the R_HOME indirection to support installations of multiple R version
-PKG_LIBS = $(shell $(R_HOME)/bin/Rscript.exe -e "Rcpp:::LdFlags()")
-PKG_CPPFLAGS =  -I. -I../inst/include 
-
