@@ -1,0 +1,53 @@
+// This file was generated by Rcpp::compileAttributes
+// Generator token: 10BE3573-1514-4C36-9D1C-5A225CD40393
+
+#include <RcppEigen.h>
+#include <Rcpp.h>
+
+using namespace Rcpp;
+
+// determinant
+NumericVector determinant(int S, int M, Eigen::Map<Eigen::MatrixXi> A, Eigen::Map<Eigen::MatrixXi> B, Eigen::Map<Eigen::VectorXd> c, Eigen::Map<Eigen::MatrixXd> pattern, Eigen::Map<Eigen::MatrixXd> Ineq, int s);
+RcppExport SEXP MPTinR_determinant(SEXP SSEXP, SEXP MSEXP, SEXP ASEXP, SEXP BSEXP, SEXP cSEXP, SEXP patternSEXP, SEXP IneqSEXP, SEXP sSEXP) {
+BEGIN_RCPP
+    SEXP __sexp_result;
+    {
+        Rcpp::RNGScope __rngScope;
+        Rcpp::traits::input_parameter< int >::type S(SSEXP );
+        Rcpp::traits::input_parameter< int >::type M(MSEXP );
+        Rcpp::traits::input_parameter< Eigen::Map<Eigen::MatrixXi> >::type A(ASEXP );
+        Rcpp::traits::input_parameter< Eigen::Map<Eigen::MatrixXi> >::type B(BSEXP );
+        Rcpp::traits::input_parameter< Eigen::Map<Eigen::VectorXd> >::type c(cSEXP );
+        Rcpp::traits::input_parameter< Eigen::Map<Eigen::MatrixXd> >::type pattern(patternSEXP );
+        Rcpp::traits::input_parameter< Eigen::Map<Eigen::MatrixXd> >::type Ineq(IneqSEXP );
+        Rcpp::traits::input_parameter< int >::type s(sSEXP );
+        NumericVector __result = determinant(S, M, A, B, c, pattern, Ineq, s);
+        PROTECT(__sexp_result = Rcpp::wrap(__result));
+    }
+    UNPROTECT(1);
+    return __sexp_result;
+END_RCPP
+}
+// determinant_c
+NumericVector determinant_c(int S, int M, Eigen::Map<Eigen::MatrixXi> A, Eigen::Map<Eigen::MatrixXi> B, Eigen::Map<Eigen::VectorXd> c, Eigen::Map<Eigen::MatrixXd> pattern, Eigen::Map<Eigen::MatrixXd> Ineq, int s, int cc);
+RcppExport SEXP MPTinR_determinant_c(SEXP SSEXP, SEXP MSEXP, SEXP ASEXP, SEXP BSEXP, SEXP cSEXP, SEXP patternSEXP, SEXP IneqSEXP, SEXP sSEXP, SEXP ccSEXP) {
+BEGIN_RCPP
+    SEXP __sexp_result;
+    {
+        Rcpp::RNGScope __rngScope;
+        Rcpp::traits::input_parameter< int >::type S(SSEXP );
+        Rcpp::traits::input_parameter< int >::type M(MSEXP );
+        Rcpp::traits::input_parameter< Eigen::Map<Eigen::MatrixXi> >::type A(ASEXP );
+        Rcpp::traits::input_parameter< Eigen::Map<Eigen::MatrixXi> >::type B(BSEXP );
+        Rcpp::traits::input_parameter< Eigen::Map<Eigen::VectorXd> >::type c(cSEXP );
+        Rcpp::traits::input_parameter< Eigen::Map<Eigen::MatrixXd> >::type pattern(patternSEXP );
+        Rcpp::traits::input_parameter< Eigen::Map<Eigen::MatrixXd> >::type Ineq(IneqSEXP );
+        Rcpp::traits::input_parameter< int >::type s(sSEXP );
+        Rcpp::traits::input_parameter< int >::type cc(ccSEXP );
+        NumericVector __result = determinant_c(S, M, A, B, c, pattern, Ineq, s, cc);
+        PROTECT(__sexp_result = Rcpp::wrap(__result));
+    }
+    UNPROTECT(1);
+    return __sexp_result;
+END_RCPP
+}
