@@ -1,69 +1,28 @@
-
-// includes from the plugin
 #include <RcppEigen.h>
-#include <Rcpp.h>
 #include <cmath>
 
-#ifndef BEGIN_RCPP
-#define BEGIN_RCPP
-#endif
-
-#ifndef END_RCPP
-#define END_RCPP
-#endif
-
 using namespace Rcpp;
 
+// [[Rcpp::depends(RcppEigen)]]
 
-// user includes
-
-
-// declarations
-extern "C" {
-SEXP determinant_c( SEXP SS, SEXP Mcast, SEXP Acast, SEXP Bcast, SEXP Ccast, SEXP patternCast, SEXP ineq, SEXP samples, SEXP mConst) ;
-}
-
-// definition
-
-SEXP determinant_c( SEXP SS, SEXP Mcast, SEXP Acast, SEXP Bcast, SEXP Ccast, SEXP patternCast, SEXP ineq, SEXP samples, SEXP mConst){
-BEGIN_RCPP
-
-using namespace Rcpp;
-using Eigen::Map;
-using Eigen::VectorXd;
-using Eigen::RowVectorXd;
-using Eigen::MatrixXi;
-using Eigen::MatrixXd;
-using Eigen::ArrayXd;
-const int S = Rcpp::as<int>(SS);
-const int M = Rcpp::as<int>(Mcast);
-const int s = Rcpp::as<int>(samples);
-const int cc = Rcpp::as<int>(mConst);
-//Rcout << "Ineq:\n"<<"\n";
-const Map<MatrixXd> Ineq(as<Map<MatrixXd> >(ineq));
-const Map<MatrixXi> A(as<Map<MatrixXi> >(Acast));
-const Map<MatrixXi> B(as<Map<MatrixXi> >(Bcast));
-const Map<VectorXd> c(as<Map<VectorXd> >(Ccast));
-const Map<MatrixXd> pattern(as<Map<MatrixXd> >(patternCast));
-//Rcout << "pattern:\n"<< pattern <<"\n";
-
-RNGScope scope;
+// [[Rcpp::export]]
+NumericVector determinant_c( int S, int M, Eigen::Map<Eigen::MatrixXi> A, Eigen::Map<Eigen::MatrixXi> B, Eigen::Map<Eigen::VectorXd> c, Eigen::Map<Eigen::MatrixXd> pattern, Eigen::Map<Eigen::MatrixXd> Ineq, int s, int cc){
 
 
 // for sampling random data
 bool found = false;
-VectorXd thetaTMP;
-RowVectorXd theta;
-VectorXd IneqT;
+Eigen::VectorXd thetaTMP;
+Eigen::RowVectorXd theta;
+Eigen::VectorXd IneqT;
 bool check1;
 bool check2;
 
 // other vars
-MatrixXd Theta;
-VectorXd p;
-MatrixXd V;
-VectorXd pc;
-MatrixXd delta0;
+Eigen::MatrixXd Theta;
+Eigen::VectorXd p;
+Eigen::MatrixXd V;
+Eigen::VectorXd pc;
+Eigen::MatrixXd delta0;
 double I;
 
 // for output
@@ -78,10 +37,15 @@ for (int i = 0; i < s; i++) {
   while (!found) {
     check1 = true;
     check2 = true;
-    thetaTMP = Rcpp::as<VectorXd>(rbeta(S, 0.5, 0.5));
+    thetaTMP = Rcpp::as<Eigen::VectorXd>(rbeta(S, 0.5, 0.5));
     theta = thetaTMP.transpose();
-  
-    IneqT = (theta*Ineq.transpose());
+	
+	// added check to avoid multiplication with Ineq if only of size (1,1) (i.e., no inequality restrictions)
+	if (Ineq.rows() == 1 && Ineq.rows() == 1 && Ineq(0,0) == 0)  {
+		IneqT.resize(1);
+		IneqT(0) = 0;
+	} else
+		IneqT = (theta*Ineq.transpose());
   
     for(int i = 0; i< IneqT.size(); i++){
         if(IneqT(i) < 0)
@@ -97,15 +61,15 @@ for (int i = 0; i < s; i++) {
     out[0] ++;
   }
   
-  Theta = VectorXd::Ones(M)*theta;
+  Theta = Eigen::VectorXd::Ones(M)*theta;
   // Rcout << "Theta:" << Theta << "\n";
   //Rcout << "IneqT \\< 0:" << (IneqT < 0) << "\n";
   //Rcout << ((theta*Ineq.transpose())<0) << "\n";
   //Rcout << "thetaTMP:\n"<<thetaTMP<<"\n";
   //Rcout << "theta:\n"<<theta<<"\n";
   
-  MatrixXd TA_tmp(Theta.rows(), Theta.cols());
-  MatrixXd TB_tmp(Theta.rows(), Theta.cols());
+  Eigen::MatrixXd TA_tmp(Theta.rows(), Theta.cols());
+  Eigen::MatrixXd TB_tmp(Theta.rows(), Theta.cols());
   
   for (int r = 0; r < Theta.rows(); r++) {
       for (int c = 0; c < Theta.cols(); c++) {
@@ -128,7 +92,7 @@ for (int i = 0; i < s; i++) {
   //MatrixXd out = Theta.array().pow(A.array());
   
   pc = V.rowwise().sum();
-  VectorXd D(pc.size());
+  Eigen::VectorXd D(pc.size());
   for (int c = 0; c < D.size(); c++) {
       if (pc(c) == 0)
           D(c) = 0;
@@ -146,15 +110,15 @@ for (int i = 0; i < s; i++) {
   I = fabs(((delta0.transpose() * D.asDiagonal() * delta0 * (theta.array()*(1 - theta.array())).matrix().asDiagonal().inverse() * M_PI * M_PI)*cc).determinant());
   // double detI = I.determinant();
 
-  //Rcout <<  "I: " << I << "\n";
+  // Rcout << "log(i): " << II << "\tI: " << I << "\n";
   
   out[1] += I;
   out[2] += std::sqrt(I);
   
 }
-return wrap(out);
+return out;
 
-END_RCPP
+
 }
 
 
